@@ -7,6 +7,8 @@
     \item \code{Ord_plot()} gets \code{lwd}, \code{lty} and \code{col} arguments
     to control plotting of the OLS and WLS lines.
     \item \code{distplot()} gets an \code{lwd} argument.
+    \item Changed default line types for \code{sieve} so that positive residuals are
+    shown with solid lines, as per Friendly specifications.
   }
 }
 
